// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OTPScreen Snapshot Tests matches snapshot for initial state 1`] = `
<View
  className="w-screen h-full p-10"
>
  <View
    className="flex-row gap-10 items-center mt-10"
  >
    <Text
      className="text-3xl font-semibold"
    >
      OTP code verification
    </Text>
  </View>
  <Text
    className="text-lg font-normal my-10"
  >
    We have sent an OTP code to email 
    test@example.com
    . Enter the code below to verify.
  </Text>
  <View
    style={
      {
        "gap": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 20,
          "justifyContent": "center",
          "marginVertical": 40,
        }
      }
    >
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-0"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-1"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-2"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-3"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-4"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-5"
        textContentType="oneTimeCode"
        value=""
      />
    </View>
  </View>
  <View
    className="items-center"
  >
    <Text
      className="text-xl"
    >
      Didn’t receive email?
    </Text>
    <Text
      className="text-xl"
    >
      You can resend code in
       
      <Text
        className="text-primary"
      >
        30
        s
      </Text>
    </Text>
  </View>
  <View
    className="flex-1 justify-end w-screen"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFC107",
          "borderRadius": 30,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "marginVertical": 8,
          "opacity": 1,
          "width": "80%",
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "600",
              },
              {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          Verify
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`OTPScreen Snapshot Tests matches snapshot with resend button visible 1`] = `
<View
  className="w-screen h-full p-10"
>
  <View
    className="flex-row gap-10 items-center mt-10"
  >
    <Text
      className="text-3xl font-semibold"
    >
      OTP code verification
    </Text>
  </View>
  <Text
    className="text-lg font-normal my-10"
  >
    We have sent an OTP code to email 
    test@example.com
    . Enter the code below to verify.
  </Text>
  <View
    style={
      {
        "gap": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 20,
          "justifyContent": "center",
          "marginVertical": 40,
        }
      }
    >
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-0"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-1"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-2"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-3"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-4"
        textContentType="oneTimeCode"
        value=""
      />
      <TextInput
        autoComplete="sms-otp"
        keyboardType="number-pad"
        maxLength={1}
        onChangeText={[Function]}
        onKeyPress={[Function]}
        returnKeyType="next"
        selectTextOnFocus={true}
        style={
          [
            {
              "backgroundColor": "#D9D9D9",
              "borderRadius": 12,
              "fontSize": 22,
              "fontWeight": "600",
              "height": 64,
              "textAlign": "center",
              "width": 42.666666666666664,
            },
            null,
          ]
        }
        testID="otp-input-5"
        textContentType="oneTimeCode"
        value=""
      />
    </View>
  </View>
  <View
    className="items-center"
  >
    <Text
      className="text-xl"
    >
      Didn’t receive email?
    </Text>
    <View
      className="w-screen items-center"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFC107",
            "borderRadius": 30,
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "center",
            "marginVertical": 8,
            "opacity": 1,
            "width": "80%",
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                {
                  "color": "#000000",
                },
                undefined,
              ]
            }
          >
            Resend
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    className="flex-1 justify-end w-screen"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFC107",
          "borderRadius": 30,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "marginVertical": 8,
          "opacity": 1,
          "width": "80%",
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "600",
              },
              {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          Verify
        </Text>
      </View>
    </View>
  </View>
</View>
`;
